# mpvcast

./: Cargo.toml  README.md  build.rs
comms/: Cargo.toml  build.rs
comms/src/: comms.proto  lib.rs
frontend/: Cargo.toml
frontend/src/: main.rs
server/: Cargo.toml
server/src/: main.rs
server/src/mpvplayer/: mod.rs
src/: main.rs  mpvcast.rs
src/mpvplayer/: mod.rs  mpvcast.rs
src/proto/: mpvcast.proto
