[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
comms = { path = "../comms" }
mpris-server = "0.8"
relm4 = "0.9"
relm4-components = "0.9"
gtk4 = "0.9"
async-std = {version = "1.13", features = ["std", "attributes", "unstable"] }
clap = { version = "4.5", features = ["derive"] }
